testsuite/tests/interpreter_errors/call_property_wrong_return_type/test.out
main.adb

Error: Unsupported value type from the introspection API: ANALYSIS_UNIT_VALUE

print(names[1].unit)
               ^^^^^

